--- a/package.json
+++ b/package.json
@@ -1,1 +1,20 @@
-{"name": "musicpro-auth", "version": "2.0.0"}
+{
+  "name": "musicpro-auth",
+  "version": "2.0.0",
+  "description": "Upload audio files, play them, with login/auth and PostgreSQL on Render.",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
+  "engines": {
+    "node": "18.x"
+  },
+  "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-session": "^2.0.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.11.5"
+  }
+}
